--- a/FE/src/app/pages/pages/auth/login/login.component.html
+++ b/FE/src/app/pages/pages/auth/login/login.component.html
@@ -2,64 +2,67 @@
   <div @fadeInUp class="card overflow-hidden w-full max-w-md">
     <div class="p-6 pb-0 flex flex-col items-center justify-center">
       <div class="fill-current text-center">
-        <img class="w-16" src="assets/img/logo/logo.svg" />
+        <img class="w-16" src="assets/img/logo/logo.svg" alt="Logo" />
       </div>
     </div>
 
     <div class="text-center mt-4">
-      <h2 class="title m-0">Welcome back</h2>
+      <h2 class="title m-0">Bienvenido de vuelta</h2>
       <h4 class="body-2 text-secondary m-0">
-        Sign in with your credentials below.
+        Inicia sesión con tus credenciales.
       </h4>
     </div>
 
     <div [formGroup]="form" class="p-6 flex flex-col gap-4">
       <div class="flex flex-col">
         <mat-form-field class="flex-1">
-          <mat-label>E-Mail</mat-label>
-          <input formControlName="email" matInput required />
+          <mat-label>Correo electrónico</mat-label>
+          <input formControlName="email" matInput required type="email" placeholder="tu@email.com" />
           <mat-error *ngIf="form.controls.email.hasError('required')"
-          >We need an email address to log you in
+          >Necesitamos un correo electrónico para iniciar sesión
           </mat-error>
         </mat-form-field>
         <mat-form-field class="flex-1">
-          <mat-label>Password</mat-label>
+          <mat-label>Contraseña</mat-label>
           <input
             [type]="inputType"
             formControlName="password"
             matInput
-            required />
+            required
+            placeholder="Tu contraseña" />
           <button
             (click)="toggleVisibility()"
             mat-icon-button
             matIconSuffix
-            matTooltip="Toggle Visibility"
+            matTooltip="Alternar visibilidad"
             type="button">
             <mat-icon *ngIf="visible" svgIcon="mat:visibility"></mat-icon>
             <mat-icon *ngIf="!visible" svgIcon="mat:visibility_off"></mat-icon>
           </button>
-          <mat-hint>Click the eye to toggle visibility</mat-hint>
+          <mat-hint>Haz clic en el ojo para alternar visibilidad</mat-hint>
           <mat-error *ngIf="form.controls.password.hasError('required')"
-          >We need a password to log you in
+          >Necesitamos una contraseña para iniciar sesión
           </mat-error>
         </mat-form-field>
       </div>
 
       <div class="flex items-center justify-between">
-        <mat-checkbox class="caption" color="primary">Remember Me</mat-checkbox>
+        <mat-checkbox class="caption" color="primary">Recordarme</mat-checkbox>
         <a [routerLink]="['/forgot-password']" class="caption"
-        >Forgot Password?</a
+        >¿Olvidaste tu contraseña?</a
         >
       </div>
 
-      <button (click)="send()" color="primary" mat-raised-button type="button">
-        SIGN IN
+      <button 
+        (click)="send()" 
+        color="primary" 
+        mat-raised-button 
+        type="button"
+        [disabled]="!form.valid || isLoading"
+        class="relative">
+        <span *ngIf="!isLoading">INICIAR SESIÓN</span>
+        <span *ngIf="isLoading">PROCESANDO...</span>
       </button>
-
-      <p class="text-secondary text-center">
-        Don't have an account?<br />
-        <a [routerLink]="['/register']">Click here to create one</a>
-      </p>
     </div>
   </div>
 </div>
