--- a/FE/src/app/pages/pages/auth/login/login.component.html
+++ b/FE/src/app/pages/pages/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div @fadeInUp class="card overflow-hidden w-full max-w-md">
     <div class="p-6 pb-0 flex flex-col items-center justify-center">
       <div class="fill-current text-center">
-        <img class="w-16" src="assets/img/logo/logo.svg" alt="Logo" />
+        <img class="w-16" src="assets/img/logo/logo.svg" />
       </div>
     </div>
 
@@ -17,7 +17,7 @@
       <div class="flex flex-col">
         <mat-form-field class="flex-1">
           <mat-label>Correo electrónico</mat-label>
-          <input formControlName="email" matInput required type="email" placeholder="tu@email.com" />
+          <input formControlName="email" matInput required />
           <mat-error *ngIf="form.controls.email.hasError('required')"
           >Necesitamos un correo electrónico para iniciar sesión
           </mat-error>
@@ -28,8 +28,7 @@
             [type]="inputType"
             formControlName="password"
             matInput
-            required
-            placeholder="Tu contraseña" />
+            required />
           <button
             (click)="toggleVisibility()"
             mat-icon-button
@@ -53,15 +52,8 @@
         >
       </div>
 
-      <button 
-        (click)="send()" 
-        color="primary" 
-        mat-raised-button 
-        type="button"
-        [disabled]="!form.valid || isLoading"
-        class="relative">
-        <span *ngIf="!isLoading">INICIAR SESIÓN</span>
-        <span *ngIf="isLoading">PROCESANDO...</span>
+      <button (click)="send()" color="primary" mat-raised-button type="button">
+        INICIAR SESIÓN
       </button>
     </div>
   </div>
