--- a/FE/src/app/layouts/components/sidenav/sidenav-user-menu/sidenav-user-menu.component.html
+++ b/FE/src/app/layouts/components/sidenav/sidenav-user-menu/sidenav-user-menu.component.html
@@ -8,7 +8,7 @@
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:account_circle"></mat-icon>
-    <div class="vex-user-menu-item__label">Your Profile</div>
+    <div class="vex-user-menu-item__label">Mi Perfil</div>
   </a>
 
   <a
@@ -20,8 +20,8 @@
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:insights"></mat-icon>
-    <div class="vex-user-menu-item__label">Analytics</div>
-    <div class="vex-user-menu-item__badge">NEW</div>
+    <div class="vex-user-menu-item__label">Analíticas</div>
+    <div class="vex-user-menu-item__badge">NUEVO</div>
   </a>
 
   <a
@@ -33,7 +33,7 @@
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:settings"></mat-icon>
-    <div class="vex-user-menu-item__label">Account Settings</div>
+    <div class="vex-user-menu-item__label">Configuración de Cuenta</div>
   </a>
 
   <div class="border-b border-divider mx-4"></div>
@@ -45,21 +45,20 @@
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:switch_account"></mat-icon>
-    <div class="vex-user-menu-item__label">Switch Account</div>
+    <div class="vex-user-menu-item__label">Cambiar Cuenta</div>
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:chevron_right"></mat-icon>
   </div>
 
   <a
-    (click)="close()"
-    [routerLink]="['/login']"
+    (click)="logout()"
     class="vex-user-menu-item"
     matRipple
     matRippleColor="rgb(var(--vex-color-primary-600), 0.1)">
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
       svgIcon="mat:logout"></mat-icon>
-    <div class="vex-user-menu-item__label">Sign Out</div>
+    <div class="vex-user-menu-item__label">Cerrar Sesión</div>
   </a>
 </div>
