--- a/FE/src/app/layouts/components/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
+++ b/FE/src/app/layouts/components/toolbar/toolbar-user/toolbar-user-dropdown/toolbar-user-dropdown.component.html
@@ -4,13 +4,13 @@
       <div class="dropdown-heading-icon flex items-center justify-center">
         <mat-icon svgIcon="mat:person"></mat-icon>
       </div>
-      <div class="dropdown-heading">David Smith</div>
+      <div class="dropdown-heading">{{ (currentUser$ | async)?.name || 'Usuario' }}</div>
     </div>
 
     <button
       [matMenuTriggerFor]="settingsMenu"
       mat-icon-button
-      matTooltip="Settings"
+      matTooltip="Configuración"
       matTooltipPosition="before"
       type="button">
       <mat-icon
@@ -58,9 +58,7 @@
         </span>
       </ng-container>
     </button>
-    <a (click)="close()" [routerLink]="['/login']" color="primary" mat-button
-    >Logout</a
-    >
+    <a (click)="logout()" color="primary" mat-button>Cerrar Sesión</a>
   </div>
 </div>
 
