--- a/FE/src/app/pages/configuracion/catalogos/agencias/agencia-edit-dialog/agencia-edit-dialog.component.html
+++ b/FE/src/app/pages/configuracion/catalogos/agencias/agencia-edit-dialog/agencia-edit-dialog.component.html
@@ -65,7 +65,7 @@
         </div>
         <div>
           <span class="text-gray-500">Último Usuario:</span>
-          <span class="ml-2">{{ data.agencia.IdLastUserUpdate || 'N/A' }}</span>
+          <span class="ml-2">{{ data.agencia.LastUserName || 'N/A' }}</span>
         </div>
         <div>
           <span class="text-gray-500">Fecha Registro:</span>
