--- a/FE/src/app/pages/configuracion/catalogos/agencias/agencias.component.html
+++ b/FE/src/app/pages/configuracion/catalogos/agencias/agencias.component.html
@@ -44,7 +44,7 @@
 
   <!-- Tabla -->
   <div class="bg-white rounded-lg shadow-sm border overflow-hidden">
-    <table mat-table [dataSource]="dataSource" matSort class="w-full">
+    <table mat-table [dataSource]="dataSource" matSort class="w-full" style="line-height: 1;">
       <!-- Columna ID -->
       <ng-container matColumnDef="Id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-16 text-center py-1 bg-gray-50 text-xs font-medium text-gray-700">
@@ -120,7 +120,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="!min-h-0 !h-8"></tr>
     </table>
 
     <!-- Paginación -->
