--- a/FE/src/app/pages/dashboards/components/widgets/widget-quick-value-start/widget-quick-value-start.component.html
+++ b/FE/src/app/pages/dashboards/components/widgets/widget-quick-value-start/widget-quick-value-start.component.html
@@ -7,12 +7,11 @@
 
     <div
       class="rounded-full bg-primary-600/10 w-12 h-12 flex items-center justify-center">
-      <mat-icon [svgIcon]="icon" class="text-primary-600></mat-icon>
+      <mat-icon [svgIcon]="icon" class="text-primary-600"></mat-icon>
     </div>
   </div>
 
-  <h2 class=" display-2 font-bold mb-2 mt-4
-      ">{{ value }}</h2>
+  <h2 class="display-2 font-bold mb-2 mt-4">{{ value }}</h2>
 
       <h4
         [class.text-green-600]="change > 0"
