--- a/FE/src/app/pages/configuracion/tipos-documento/tipos-documento.component.html
+++ b/FE/src/app/pages/configuracion/tipos-documento/tipos-documento.component.html
@@ -91,10 +91,10 @@
         </td>
       </ng-container>
 
-      <!-- Columna Subproceso -->
+      <!-- Columna Sub Fase -->
       <ng-container matColumnDef="SubProcessName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-32 py-1 bg-gray-50 text-xs font-medium text-gray-700">
-          Subproceso
+          Sub Fase
         </th>
         <td mat-cell *matCellDef="let tipoDocumento" class="text-xs py-0">
           {{ tipoDocumento.SubProcessName || 'N/A' }}
