--- a/FE/src/app/pages/configuracion/tipos-documento/tipos-documento.component.html
+++ b/FE/src/app/pages/configuracion/tipos-documento/tipos-documento.component.html
@@ -68,8 +68,8 @@
         <mat-label>Estado</mat-label>
         <mat-select [(ngModel)]="statusFilter" (ngModelChange)="applyFilter()">
           <mat-option value="">Todos</mat-option>
-          <mat-option value="true">Activos</mat-option>
-          <mat-option value="false">Inactivos</mat-option>
+          <mat-option value="1">Activos</mat-option>
+          <mat-option value="0">Inactivos</mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -141,8 +141,8 @@
         </th>
         <td mat-cell *matCellDef="let tipoDocumento" class="text-center">
           <span class="px-1.5 py-0.5 rounded-full text-xs font-medium"
-                [ngClass]="tipoDocumento.Required === 1 ? 'bg-blue-100 text-blue-800' : 'bg-gray-100 text-gray-800'">
-            {{ tipoDocumento.Required === 1 ? 'Sí' : 'No' }}
+                [ngClass]="tipoDocumento.Required === '1' ? 'bg-blue-100 text-blue-800' : 'bg-gray-100 text-gray-800'">
+            {{ tipoDocumento.Required === '1' ? 'Sí' : 'No' }}
           </span>
         </td>
       </ng-container>
@@ -154,8 +154,8 @@
         </th>
         <td mat-cell *matCellDef="let tipoDocumento" class="text-center">
           <span class="px-1.5 py-0.5 rounded-full text-xs font-medium"
-                [ngClass]="tipoDocumento.ReqExpiration === 1 ? 'bg-yellow-100 text-yellow-800' : 'bg-gray-100 text-gray-800'">
-            {{ tipoDocumento.ReqExpiration === 1 ? 'Sí' : 'No' }}
+                [ngClass]="tipoDocumento.ReqExpiration === '1' ? 'bg-yellow-100 text-yellow-800' : 'bg-gray-100 text-gray-800'">
+            {{ tipoDocumento.ReqExpiration === '1' ? 'Sí' : 'No' }}
           </span>
         </td>
       </ng-container>
@@ -168,10 +168,10 @@
         <td mat-cell *matCellDef="let tipoDocumento" class="text-center">
           <div class="flex items-center justify-center">
             <div class="w-0.5 h-0.5 rounded-full mr-2" 
-                 [ngClass]="tipoDocumento.Enabled === 1 ? 'bg-green-500' : 'bg-red-500'"></div>
+                 [ngClass]="tipoDocumento.Enabled === '1' ? 'bg-green-500' : 'bg-red-500'"></div>
             <span class="px-1.5 py-0.5 rounded-full text-xs font-medium"
-                  [ngClass]="tipoDocumento.Enabled === 1 ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800'">
-              {{ tipoDocumento.Enabled === 1 ? 'Activo' : 'Inactivo' }}
+                  [ngClass]="tipoDocumento.Enabled === '1' ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800'">
+              {{ tipoDocumento.Enabled === '1' ? 'Activo' : 'Inactivo' }}
             </span>
           </div>
         </td>
