--- a/FE/src/app/pages/apps/social/social-timeline/social-timeline.component.html
+++ b/FE/src/app/pages/apps/social/social-timeline/social-timeline.component.html
@@ -188,7 +188,7 @@
     class="flex-none max-w-unset md:max-w-xs w-full md:ltr:ml-6 md:rtl:mr-6 mt-6 md:mt-0">
     <div class="card">
       <div class="px-6 py-4 border-b">
-        <h2 class="title m-0">About</h2>
+        <h2 class="title m-0"></h2>
       </div>
 
       <div class="px-6 py-3">
