--- a/FE/src/app/layouts/components/sidenav/sidenav-user-menu/sidenav-user-menu.component.html
+++ b/FE/src/app/layouts/components/sidenav/sidenav-user-menu/sidenav-user-menu.component.html
@@ -7,8 +7,8 @@
     matRippleColor="rgb(var(--vex-color-primary-600), 0.1)">
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
-      svgIcon="mat:account_circle"></mat-icon>
-    <div class="vex-user-menu-item__label">Mi Perfil</div>
+      svgIcon="mat:settings"></mat-icon>
+    <div class="vex-user-menu-item__label">Configuración de Cuenta</div>
   </a>
 
   <a
@@ -24,17 +24,17 @@
     <div class="vex-user-menu-item__badge">NUEVO</div>
   </a>
 
-  <a
+  <!-- <a
     (click)="close()"
-    [routerLink]="['/apps/social/timeline']"
+    [routerLink]="['/apps/social']"
     class="vex-user-menu-item"
     matRipple
     matRippleColor="rgb(var(--vex-color-primary-600), 0.1)">
     <mat-icon
       class="vex-user-menu-item__icon icon-sm"
-      svgIcon="mat:settings"></mat-icon>
-    <div class="vex-user-menu-item__label">Configuración de Cuenta</div>
-  </a>
+      svgIcon="mat:account_circle"></mat-icon>
+    <div class="vex-user-menu-item__label">Mi Perfil</div>
+  </a> -->
 
 
 
