--- a/FE/src/app/layouts/layout/layout.component.html
+++ b/FE/src/app/layouts/layout/layout.component.html
@@ -32,16 +32,16 @@
     </mat-sidenav-content>
   </mat-sidenav-container>
 
-  <vex-config-panel-toggle
-    (openConfig)="configpanel.open()"></vex-config-panel-toggle>
+  <!-- <vex-config-panel-toggle
+    (openConfig)="configpanel.open()"></vex-config-panel-toggle> -->
 
   <!-- CONFIGPANEL -->
-  <vex-sidebar
+  <!-- <vex-sidebar
     #configpanel
     [invisibleBackdrop]="true"
     [opened]="!!(configPanelOpen$ | async)"
     position="right">
     <vex-config-panel></vex-config-panel>
-  </vex-sidebar>
+  </vex-sidebar> -->
   <!-- END CONFIGPANEL -->
 </vex-base-layout>
