--- a/FE/src/app/pages/pages/auth/login/login.component.html
+++ b/FE/src/app/pages/pages/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <div @fadeInUp class="card overflow-hidden w-full max-w-md">
     <div class="p-6 pb-0 flex flex-col items-center justify-center">
       <div class="fill-current text-center">
-        <img class="w-16" src="assets/img/logo/logo.svg" />
+        <img class="w-24" src="assets/img/icons/logos/logo_login.svg" />
       </div>
     </div>
 
@@ -62,15 +62,7 @@
         <span *ngIf="loading">INICIANDO...</span>
       </button>
 
-      <!-- Botón de prueba temporal -->
-      <button 
-        (click)="testLogout()" 
-        color="warn" 
-        mat-button 
-        type="button"
-        class="mt-2">
-        🧪 Probar Logout
-      </button>
+
     </div>
   </div>
 </div>
