--- a/FE/src/app/pages/configuracion/usuarios/usuarios.component.html
+++ b/FE/src/app/pages/configuracion/usuarios/usuarios.component.html
@@ -151,7 +151,7 @@
               Sin agencias
             </span>
             <div *ngIf="user.AssignedAgencyNames && user.AssignedAgencyNames.length > 0" 
-                 class="relative group cursor-help">
+                 class="relative group">
               <div class="flex items-center gap-1 px-3 py-1 bg-blue-100 text-blue-800 rounded-full text-xs font-medium border border-blue-200 hover:bg-blue-200 transition-colors">
                 <mat-icon class="!text-xs !w-3 !h-3 text-blue-600">business</mat-icon>
                 <span>{{ user.AssignedAgencyNames.length }} agencia{{ user.AssignedAgencyNames.length !== 1 ? 's' : '' }}</span>
